[project]
name = "contact-form-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "quart-rate-limiter>=0.11.0",
    "ruff>=0.9.10",
    "tomli>=2.2.1",
]
